--- a/src/scss/navigation/_menu.account.scss
+++ b/src/scss/navigation/_menu.account.scss
@@ -1,5 +1,5 @@
 .menu--account {
-  @include media-breakpoint-up(md) {
+  @include media-breakpoint-up(lg) {
     position: relative;
     margin: 30px 0;
     text-align: right;
@@ -17,7 +17,7 @@
   }
 
   .menu {
-    @include media-breakpoint-up(md) {
+    @include media-breakpoint-up(lg) {
       display: inline-flex;
       flex-flow: row nowrap;
       justify-content: flex-end;
@@ -30,7 +30,7 @@
   }
 
   .menu-item {
-    @include media-breakpoint-up(md) {
+    @include media-breakpoint-up(lg) {
       margin-left: 60px;
     }
 
@@ -40,7 +40,7 @@
   }
 
   a {
-    @include media-breakpoint-up(md) {
+    @include media-breakpoint-up(lg) {
       color: var(--color--grey);
       font-size: $font-size--s;
       font-family: $font-lato--medium;
@@ -52,10 +52,12 @@
   }
 }
 
-.region-navigation {
+.region-post-header {
   .menu--account {
+    display: none;
+    
     @include media-breakpoint-up(md) {
-      display: none;
+      display: block;
     }
   }
 }
