--- a/src/scss/navigation/_menu.main.expanded.scss
+++ b/src/scss/navigation/_menu.main.expanded.scss
@@ -67,6 +67,10 @@
     opacity: 0;
     background: rgba(0, 0, 0, 0.8);
     box-shadow: 0 10px 10px -5px rgba(0, 0, 0, 0.5);
+    
+    @include media-breakpoint-up(lg) {
+      padding-left: unset;
+    }
 
     .menu-item {
       padding-right: 0;
